--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -1,15 +1,14 @@
 body {
-    background-image: linear-gradient(to top, #d4f2ef, #c4e3e2, #b5d3d5, #a7c4c8, #99b5bb, #90afb6, #88a9b0, #7fa3ab, #79a4ab, #74a6a9, #6fa7a7, #6ba8a4);
-    /*background-color: #6ba8a4;*/
+    /*background-image: linear-gradient(to top, #d4f2ef, #c4e3e2, #b5d3d5, #a7c4c8, #99b5bb, #90afb6, #88a9b0, #7fa3ab, #79a4ab, #74a6a9, #6fa7a7, #6ba8a4);*/
+    background-color: #d4f2ef;
     margin: 0;
     height: 100vh;
 }
 
 /*HEADER SECTION STYLING*/
 .index-header {
-    background-color: #5b99a4;
+    background-color: #90b4b3;
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
     align-items: center;
 }
@@ -31,7 +30,7 @@ body {
     font-size: 42px;
     color: #070707;
     font-weight: bold;
-    text-shadow: 2px -2px 0px rgba(0,0,0,0.4);
+    text-shadow: 1px -1px 0 rgba(0,0,0,0.4);
 }
 
 #buddy-text {
@@ -48,14 +47,19 @@ body {
 #links-header a {
     text-decoration: none;
     text-align: center;
-    background-color: #8ddae8;
     margin: 6px;
-    padding: 10px;
-    border: 2px solid #3f3f3f;
-    border-radius: 150px;
     width: 6rem;
-    box-shadow: 0px 7px 5px -5px rgba(0,0,0,0.6);
     color: #1e1d1d;
+    font-weight: 600;
+    padding: 10px;
+    transition: ease-in 0.2s;
+}
+
+#links-header a:hover {
+    background-color: rgba(111, 158, 166, 0.45);
+    border-radius: 20px;
+    box-shadow: 0 4px 6px -2px rgba(0,0,0,0.6);
+    transform: scale3d(98%, 100%, 100%);
 }
 
 /*BODY #1 DESCRIPTION STYLING*/
@@ -97,7 +101,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 0 auto;
+    margin: 20px auto;
     max-width: 1100px;
 }
 
@@ -135,4 +139,29 @@ body {
 .blurb-section p {
     text-align: center;
     font-family: "Segoe UI", sans-serif;
+}
+
+@media only screen and (max-width: 680px) {
+    #index-body-cta {
+        width: 20rem;
+        text-align: center;
+    }
+
+    h2 {
+        font-size: 22px;
+    }
+
+    .index-header {
+        flex-direction: column;
+        justify-content: center;
+    }
+    
+    #icon-header {
+        width: 50px;
+        height: 50px;
+    }
+
+    h1 {
+        font-size: 32px;
+    }
 }
